fix bugs & format
fix bugs & format. change lambda flag ^ to $